--- a/algo-ganho-algo-perdido.html
+++ b/algo-ganho-algo-perdido.html
@@ -106,6 +106,10 @@
                 </section>
 
                 <section>
+                    <img src="_images/moto.jpg" class="stretch"/>
+                </section>
+
+                <section>
                     <img src="_images/unpopular-opinion.jpg" class="stretch"/>
                 </section>
 
@@ -114,7 +118,7 @@
                     <!-- bolsista gradução -->
                     <!-- outros bolsistas -->
                     <!-- comunidade software livre -->
-                    <p>de 1996 até 1998</p>
+                    <p>de 1997 até 1998</p>
                 </section>
 
                 <section>
@@ -140,7 +144,7 @@
                 </section>
 
                 <section>
-                    <img src="_images/tchelinux.png" class="stretch">
+                    <img src="_images/tchelinux.png" class="stretch"/>
                 </section>
 
                 <section>
@@ -178,7 +182,7 @@
                 <section>
                     <img src="_images/meetup.png" class="stretch"/>
                     <!-- todo sábado -->
-                    <!-- reunião só com 3 pessoas -->
+                    <!-- reunião só com 2 pessoas -->
                     <p class="fragment">... até 2020</p>
                 </section>
 
@@ -219,8 +223,8 @@
                 <section>
                     <ul class="chat">
                         <li><span>X:</span> "Pessoal, alguém trabalha com HTMX? Estou com um problema no load..."</li>
-                        <li><span>X:</span> "O Json tem [{"title": "Room", "description": "Nome do arquiteto"}]"</li>
-                        <li><span>Y:</span> "X, você é do ramo de arquitetura?"</li>
+                        <li><span>X:</span> "O Json tem [{"title": "Room", "description": "Nome do cozinheiro"}]"</li>
+                        <li><span>Y:</span> "X, você é do ramo de cozinha?"</li>
                     </ul>
                     <!-- off-topic -->
                 </section>
@@ -272,11 +276,11 @@
                 </section>
 
                 <section>
-                    <img src="_images/tired.jpg" class="stretch"/>
+                    <img src="_images/lots-of-messages.png" class="stretch"/>
                 </section>
 
                 <section>
-                    <p>"Redução da distância do relacionamento inter-impessoal"</p>
+                    <img src="_images/tired.jpg" class="stretch"/>
                 </section>
 
                 <section>
@@ -304,6 +308,10 @@
 
                 <section>
                     <h3>Algo se perdeu.</h3>
+                </section>
+
+                <section>
+                    <p>"Redução da distância do relacionamento inter-impessoal"</p>
                 </section>
 
                 <section>
